# adventofcode

./: Cargo.toml  day1.ts  day2.ts  iter.ts  utils.rs  utils.ts
1/: 1.ts  2.ts
10/: 1.rs  1.ts
11/: 1.rs  1.ts
12/: code.rs
13/: code.rs
14/: code.ts
15/: code.ts  test.ts
16/: code.ts
17/: code.ts
18/: code.ts
19/: code.ts  point.ts
2/: 1.ts  2.ts
20/: code.ts
2015/: Cargo.toml
2015/data/10/: elements
2015/data/6/: example
2015/src/: utils.rs
2020/: day1.go  day2.go  day3.go  day4.go  day5.go  day6.go  day7.go  go.mod
2021/: Cargo.toml  sync-iter.ts
2021/1/: 1.ts
2021/10/: 1.ts
2021/11/: 1.rs  1.ts
2021/13/: code.rs  code.ts
2021/14/: code.rs
2021/15/: example_tiny
2021/2/: 1.ts  2.ts
2021/23/: code.ts  code2.ts
2021/24/: scratch
2021/25/: code.ts
2021/3/: 1.ts  2.ts
2021/5/: 2.ts
2021/6/: 1.ts
2021/7/: 1.ts
2021/9/: 1.ts
2022/: Cargo.toml
2023/: Cargo.toml
2023/deno/: day2.ts  day3.ts  iter.ts  util.ts
2024/: .gitignore  readme.md
21/: code.ts
22/: code.ts
23/: code.ts
24/: code.ts  input-scratch  scratch.ts
3/: 1.ts  2.ts
4/: 1.ts
5/: 1.ts  2.ts
6/: 1.ts  2.ts
7/: 2.ts
8/: 1.ts
9/: 1.ts
