[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
itertools = "0.10"

[lib]
name = "utils"
path = "utils.rs"

[[bin]]
name = "day10"
path = "10/1.rs"

[[bin]]
name = "day11"
path = "11/1.rs"

[[bin]]
name = "day12"
path = "12/code.rs"

[[bin]]
name = "day13"
path = "13/code.rs"

[[bin]]
name = "day14"
path = "14/code.rs"
